--- a/emailTemplate.html
+++ b/emailTemplate.html
@@ -1418,7 +1418,7 @@ body.outlook p {
                         </tr>
                       </tbody>
                     </table>
-                    <center data-parsed=""> <img src="./order.png" alt="" align="center" class="float-center"> </center>
+                    <center data-parsed=""> <img src="order.png" alt="" align="center" class="float-center"> </center>
                     <table class="spacer">
                       <tbody>
                         <tr>
